style: dark mode fix

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -66,6 +66,7 @@
     --card-hover: #454545;
     --border: rgba(255, 255, 255, 0.1);
     --border-hover: rgba(255, 255, 255, 0.2);
+    --color-blue: #6c78ff;
 
     /* Text Colors */
     --text-primary: var(--color-white);
@@ -205,12 +206,14 @@ h6 {
 .bg-orange {
   background-color: var(--color-orange);
 }
-
-/* Black/White Classes */
-.bg-black {
-  background-color: var(--color-black);
+.bg-orange-blue {
+  background-color: var(--color-orange);
 }
-
+@media (prefers-color-scheme: dark) {
+  .bg-orange-blue {
+    background-color: var(--color-blue);
+  }
+}
 .bg-card {
   background-color: var(--card-bg);
 }
